corección de erres nueva version